--- a/config/cable.yml
+++ b/config/cable.yml
@@ -1,10 +1,21 @@
+# development:
+#   adapter: redis
+#   url: redis://localhost:6379/1
+
+# test:
+#   adapter: async
+
+# production:
+#   adapter: redis
+#   url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
+#   channel_prefix: youtubesharing_production
 development:
-  adapter: async
+  adapter: redis
+  url: redis://localhost:6379/1
 
 test:
   adapter: async
 
 production:
   adapter: redis
-  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
-  channel_prefix: youtubesharing_production
+  url: redis://localhost:6379/1
